[package]
name = "mobile_code"
description = "Generate a mobile code."
license = "MIT OR Apache-2.0"
version = "0.0.1"
authors = ["shaw1236"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4.0"
num-traits = "0.2"
